# Bracelet_CNC

./: CMakeLists.txt  README.md
src/: MainWindow.cpp  MainWindow.h  OccView.cpp  OccView.h  main.cpp
tests/: OccViewTests.cpp
